<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/abacus_relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="30dp"
        android:textColor="@color/white"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/akronim"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/live_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/level"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white" />

    <ImageView
        android:id="@+id/close_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/ic_baseline_arrow_back_24"
        android:contentDescription="@string/back" />


    <TextView
        android:id="@+id/question_display"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/answer_display"
        android:layout_below="@id/counter"
        android:fontFamily="@font/aclonica"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/answer_display"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_above="@id/keypad"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:paddingHorizontal="20dp"
        android:textAlignment="viewEnd"
        android:textColor="@color/grey"
        android:textSize="20sp"
        tools:ignore="RtlCompat" />

    <LinearLayout
        android:id="@+id/keypad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginVertical="40dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp">

            <Button

                android:id="@+id/n1"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:layout_toStartOf="@id/n2"
                android:layout_toLeftOf="@id/n2"
                android:fontFamily="@font/aclonica"
                android:text="@string/n_1"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/n2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerInParent="true"
                android:fontFamily="@font/aclonica"
                android:text="@string/n_2"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/n3"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_toEndOf="@id/n2"
                android:layout_toRightOf="@id/n2"
                android:fontFamily="@font/aclonica"
                android:text="@string/n_3"
                android:textColor="@color/white"
                android:textSize="25sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp">

            <Button
                android:id="@+id/n4"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:layout_toStartOf="@id/n5"
                android:layout_toLeftOf="@id/n5"
                android:fontFamily="@font/aclonica"
                android:text="@string/n_4"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/n5"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerInParent="true"
                android:fontFamily="@font/aclonica"
                android:text="@string/n_5"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/n6"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_toEndOf="@id/n5"
                android:layout_toRightOf="@id/n5"
                android:fontFamily="@font/aclonica"
                android:text="@string/n_6"
                android:textColor="@color/white"
                android:textSize="25sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp">

            <Button
                android:id="@+id/n7"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:layout_toStartOf="@id/n8"
                android:layout_toLeftOf="@id/n8"
                android:fontFamily="@font/aclonica"
                android:text="@string/n_7"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/n8"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerInParent="true"
                android:fontFamily="@font/aclonica"
                android:text="@string/n_8"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/n9"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_toEndOf="@id/n8"
                android:layout_toRightOf="@id/n8"
                android:fontFamily="@font/aclonica"
                android:text="@string/n_9"
                android:textColor="@color/white"
                android:textSize="25sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp">

            <Button
                android:id="@+id/backspace"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_toEndOf="@id/n0"
                android:layout_toRightOf="@id/n0"
                android:background="@drawable/ic_baseline_backspace_24" />

            <Button
                android:id="@+id/n0"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerInParent="true"
                android:fontFamily="@font/aclonica"
                android:text="@string/n_0"
                android:textColor="@color/white"
                android:textSize="25sp" />

            <Button
                android:id="@+id/all_clear"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginEnd="25dp"
                android:layout_marginRight="25dp"
                android:layout_toStartOf="@id/n0"
                android:layout_toLeftOf="@id/n0"
                android:fontFamily="@font/aclonica"
                android:text="@string/all_clear"
                android:textColor="@color/white"
                android:textSize="25sp" />

        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>